Fixed majority of wire and main page layout issues and some smaller bugs

--- a/app/stylesheets/shared/_replies.css.sass
+++ b/app/stylesheets/shared/_replies.css.sass
@@ -108,17 +108,18 @@
     border: 0
     
   .reply-text
-    float: right
-
+    float: left 
+    margin-left: 30px
     textarea 
       font-family: Helvetica, Arial, sans-serif
       font-size: 12px
       color: #888
       background: white
+      box-shadow: none
       border: 1px solid #c3c3c3
       padding: 8px 10px
       height: 12px
-      width: 380px
+      width: 526px
       line-height: 14px
       
       &:focus
@@ -139,8 +140,8 @@
   font-size: 11px
   color: white
   text-transform: uppercase
-  margin-top: 6px
   width: 31px
+  clear: both
   &:hover
     cursor: pointer
 .waiting
