--- a/app/stylesheets/shared/_wire.css.sass
+++ b/app/stylesheets/shared/_wire.css.sass
@@ -3,10 +3,14 @@
 .wire
   min-height: 100px
   width: 650px
-  background: white
   border-radius: 5px
   margin: 0px auto
+    right: 24px
+    top: -10px
   position: relative
+  .wire-item 
+    background: white
+    margin-bottom: 24px
   .wire-top
     height: 30px
     border-radius: 4px
