--- a/app/stylesheets/shared/sidebar.sass
+++ b/app/stylesheets/shared/sidebar.sass
@@ -101,7 +101,7 @@ $black-shadow: 0px 2px 1px black
 .clear
   clear: both
 #main
-  width: 1100px
+  width: 1000px
   margin: 0 auto
 
 #current-registration-page, #next-registration-page
@@ -207,7 +207,7 @@ $black-shadow: 0px 2px 1px black
   position: fixed
   display: block
   height: 100%
-  margin-top: 45px
+  margin-top: 60px
   z-index: 999
   border: 1px solid #a4a295
 .red-button
@@ -267,6 +267,7 @@ ul.post-box
           padding-bottom: 8px
           padding-left: 43px
           background: image-url("shared/redesign/sidebar-icon.png") no-repeat left
+          background-size: 32px
           line-height: 26px
           &:hover, &:focus, &:active
             color: $red
@@ -274,15 +275,23 @@ ul.post-box
 
         #request
           background: image-url("shared/redesign/request-offer-icon.png") no-repeat left
+          background-size: 32px
+
+        #marketplace
+          background: image-url("shared/redesign/marketplace-icon.png") no-repeat left
+          background-size: 32px
 
         #event
-          background: image-url("shared/redesign/event-icon.png") no-repeat left
+          background: image-url("shared/redesign/events-icon.png") no-repeat left
+          background-size: 32px
 
         #discussion
           background: image-url("shared/redesign/discussions-icon.png") no-repeat left
+          background-size: 32px
 
         #announcement
           background: image-url("shared/redesign/announcements-icon.png") no-repeat left       
+          background-size: 32px
 
   #directories
     width: 270px
@@ -552,23 +561,31 @@ ul.post-box
         padding-bottom: 8px
         padding-left: 43px
         background: image-url("shared/redesign/sidebar-icon.png") no-repeat left
+        background-size: 32px
         line-height: 26px
-        text-shadow: 1px 1px 0px #fff
         &:hover, &:focus, &:active
           color: $red
           text-shadow: 2px 2px 0px white
 
       #request
         background: image-url("shared/redesign/request-offer-icon.png") no-repeat left
+        background-size: 32px
+
+      #marketplace
+        background: image-url("shared/redesign/marketplace-icon.png") no-repeat left
+        background-size: 32px
 
       #event
-        background: image-url("shared/redesign/event-icon.png") no-repeat left
+        background: image-url("shared/redesign/events-icon.png") no-repeat left
+        background-size: 32px
 
       #discussion
         background: image-url("shared/redesign/discussions-icon.png") no-repeat left
+        background-size: 32px
 
       #announcement
-        background: image-url("shared/redesign/announcements-icon.png") no-repeat left
+        background: image-url("shared/redesign/announcements-icon.png") no-repeat left       
+        background-size: 32px
 
 
 #community-resources div.sticky
